--- a/Aurora/sample.html
+++ b/Aurora/sample.html
@@ -31,7 +31,7 @@
           "total-order-value": "3000",
           "show-product-name": false,
           theme: "rgb(155, 102, 0)",
-          logoPosition: "right",
+          "logo-position": "right",
         });
       }, 1000);
     });
