Fixed UI alingments & added condition for EMI tenure

--- a/Nebula/sample.html
+++ b/Nebula/sample.html
@@ -36,8 +36,8 @@
       show-product-image= true
       show-product-name= true
       theme= "rgb(220,20,60)"
-      logo-position= "left"
-      button-text= "in flexible installments"
+      logo-position= "right"
+      button-text= "do you want to pay with"
       currency= "₹"
       product-image=
         "https://cdn.fynd.com/v2/falling-surf-7c8bb8/fyndnp/wrkr/x5/products/pictures/item/free/resize-w:800/e0r0ygn1e-black-shirt.png"
